--- a/_site.yml
+++ b/_site.yml
@@ -11,4 +11,9 @@ navbar:
       href: http://github.com/mangulo13/
 output:
   html_document:
-    theme: cerulean
+    theme: flatly
+    
+    
+
+
+    
