--- a/_site.yml
+++ b/_site.yml
@@ -8,7 +8,7 @@ navbar:
     - text: "Plotly"
       href: plotly.html
     - text: "Dashboard"
-      href: Dashboard.html
+      href: dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<ma3997@columbia.edu>
     - icon: fa-github fa-lg
